fixed delete & update snippet w/ password
