# restAPI/api.yaml
@@ -88,6 +88,12 @@ paths:
         required: true
         schema:
           type: string
+      - in: body
+        name: password
+        description: password of Snippet to be deleted
+        required: true
+        schema:
+          type: string
       responses:
         200:
           description: Snippet deleted
