# src/main/java/com/amazonaws/http/CreateRequest.java
@@ -4,21 +4,21 @@ import java.io.Serializable;
 
 public class CreateRequest implements Serializable{
 
-	private static final long serialVersionUID = 1L;
-	private String password = null;
+	public static final long serialVersionUID = 1L;
+	public String password = null;
 	
 	public String getPass() { return password; }
-	public void setPass(String pass) { password = pass; }
+	public void setPass(String password) { this.password = password; }
 	
 	public CreateRequest() {}
 	
-	public CreateRequest(String pass) {
-		this.password = pass;
+	public CreateRequest(String password) {
+		this.password = password;
 		
 	}
 
 	public String toString() {
-		return "Create Snippet";
+		return "Create Snippet(" + password + ")";
 	}
 
 }
